# mcp-server-unitycatalog

./: .env  Dockerfile  README.md  hello.py  pyproject.toml
notebooks/: Inspect Python AST.ipynb  Register Unity Catalog Functions.ipynb
src/mcp_server_unitycatalog/: __init__.py  bootstrap.py  cli.py  config.py  context.py  contexts.py  logger.py  logging.py  loggings.py  server.py  settings.py  tools.py  utils.py
tests/: conftest.py  test_settings.py
